--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.4",
     "pinia": "^2.3.1",
+    "tailwindcss": "^4.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@iconify/vue": "^4.3.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
